# openinstall

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HONESTY.md  LICENSE  README.md  openinstall.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish-manifest.yml  release.yml
crates/installer-bootstrapper/: Cargo.toml
crates/installer-bootstrapper/src/: main.rs
crates/installer-cli/: Cargo.toml
crates/installer-cli/src/: main.rs
crates/installer-cli/src/gui/: app.rs  i18n.rs  mod.rs
crates/installer-core/: Cargo.toml
crates/installer-core/src/: adapters.rs  api.rs  constants.rs  desktop.rs  environment.rs  github.rs  lib.rs  manifest.rs  matrix.rs  publish.rs  runtime.rs  signature.rs  uri.rs
crates/installer-core/src/adapters/: apt.rs  dnf.rs  flatpak.rs  mod.rs  packagekit.rs  pacman.rs  zypper.rs
crates/installer-gui/: Cargo.toml
crates/installer-gui/src/: app.rs  i18n.rs  lib.rs  main.rs  settings.rs
docs/: architecture.md  index.html  manifest.md  publishing.md
scripts/: install.sh
website/: COMPONENTS.md  DESIGN_SYSTEM.md
website/src/: middleware.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/api/auth/login/: route.ts
website/src/app/api/auth/register/: route.ts
website/src/app/api/manifests/: route.ts
website/src/app/api/manifests/[id]/: route.ts
website/src/app/api/user/favorites/: route.ts
website/src/app/api/user/history/: route.ts
website/src/app/app/[id]/: page.tsx
website/src/app/auth/login/: page.tsx
website/src/app/auth/register/: page.tsx
website/src/app/catalog/: page.tsx
website/src/app/dashboard/: page.tsx
website/src/app/publish/: page.tsx
website/src/components/: AppCard.tsx  Button.tsx  CatalogClient.tsx  CopyButton.tsx  CopyCommand.tsx  Footer.tsx  Input.tsx  InstallButton.tsx  Navbar.tsx  SearchBar.tsx
website/src/lib/: auth.ts  mongodb.ts
website/src/models/: Manifest.ts  User.ts
