[workspace]
resolver = "2"
members = [
    "crates/installer-core",
    "crates/installer-cli",
    "crates/installer-gui",
    "crates/installer-bootstrapper",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

