[package]
name = "installer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "installer"
path = "src/main.rs"

[features]
default = []
gui = ["installer-gui"]

[dependencies]
installer-core = { path = "../installer-core" }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
installer-gui = { path = "../installer-gui", optional = true }
