[package]
name = "installer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "installer_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
ring = "0.17.14"
