[package]
name = "installer-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
installer-core = { path = "../installer-core" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.11.4"
adw = { package = "libadwaita", version = "0.9.2" }
glib = "0.22.4"

[target.'cfg(not(target_os = "linux"))'.dependencies]
glib = "0.22.4"
