[package]
name = "installer-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
installer-core = { path = "../installer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.11.4", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_5"] }
glib = "0.22.4"

[target.'cfg(not(target_os = "linux"))'.dependencies]
glib = "0.22.4"
